<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_cases"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/activeNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/active"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="12dp"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/confirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmed_cases"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/activeNo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:textSize="15sp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/confirmedNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/confirmed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textStyle="bold">
    </TextView>


    <TextView
        android:id="@+id/recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovered_cases"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/confirmedNo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/recoveredNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/recovered"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_deaths"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/recoveredNo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/deathsNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/deaths"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:textStyle="bold">
    </TextView>


    <Button
        android:id="@+id/stateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="stateWise"
        android:text="@string/state_wise_data"
        app:layout_constraintTop_toBottomOf="@id/deathsNo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="75dp"
        android:backgroundTint="#1E90FF" />

    <Button
        android:id="@+id/news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news"
        android:onClick="news"
        app:layout_constraintTop_toBottomOf="@id/stateButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FF0000">

    </Button>

    <TextView
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_updated"
        app:layout_constraintTop_toBottomOf="@id/news"
        android:layout_marginTop="60dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black">

    </TextView>
    <TextView
        android:id="@+id/updateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/update"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </TextView>

  </androidx.constraintlayout.widget.ConstraintLayout>